[package]
name = "acyclic_output_fuzz"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
path = "lib.rs"

[dependencies]
output_fuzz_common = { path = "../output_fuzz_common" }
proptest = { workspace = true }
rolldown = { workspace = true }
rolldown_common = { workspace = true }
tokio = { workspace = true }
oxc = { workspace = true }
