[package]
name = "output_fuzz_common"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
path = "lib.rs"

[dependencies]
proptest = { workspace = true }
rolldown = { workspace = true }
rolldown_common = { workspace = true }
tokio = { workspace = true }
base64 = { workspace = true }
flate2 = { workspace = true }
serde_json = { workspace = true }
